--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,9 +1,8 @@
 {
   "extends": "stylelint-config-standard",
+  "plugins": ["stylelint-indentation"],
   "rules": {
     "indentation": 2,
-    "declaration-block-no-shorthand-property-overrides": null,
-    "color-function-notation": "modern",
-    "alpha-value-notation": "number"
+    "indentation/indentation": 2
   }
 }
