--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -22,7 +22,7 @@ jobs:
     # Шаг 3: Линтинг CSS
     - name: Lint CSS
       run: |
-        npm install -g stylelint stylelint-config-standard stylelint-indentation
+        npm install -g stylelint stylelint-config-standard
         stylelint "style.css" --config .stylelintrc.json --fix
         git diff --exit-code
 
