--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,8 +1,8 @@
 {
   "extends": "stylelint-config-standard",
-  "plugins": ["stylelint-indentation"],
   "rules": {
     "indentation": 2,
-    "indentation/indentation": 2
+    "color-hex-length": "short",
+    "declaration-block-no-shorthand-property-overrides": null
   }
 }
