--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,7 +1,7 @@
 {
   "extends": "stylelint-config-standard",
   "rules": {
-    "indentation": 2,
+    "indentation": null, 
     "color-hex-length": "short",
     "declaration-block-no-shorthand-property-overrides": null
   }
