--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -2,7 +2,7 @@
   "extends": "stylelint-config-standard",
   "rules": {
     "indentation": null,
-    "color-hex-length": "short",
-    "declaration-block-no-shorthand-property-overrides": null
+    "font-family-name-quotes": null, 
+    "color-hex-length": "short"
   }
 }
